added some keys required by 6.4

--- a/langpack/modules/Accounts/language/pl_pl.help.EditView.html
+++ b/langpack/modules/Accounts/language/pl_pl.help.EditView.html
@@ -77,6 +77,6 @@
 <p><span class="helpButton">Opis</span>. 
 <br>Napisz krótką informację o kliencie.</p>
 
-<p>Kliknij <span class="helpButton">Zapisz</span> aby zachować dane o nowym kliencie; kliknij <span class="helpButton">Skasuj</span> aby oupścić formularz, bez zapisywania danych.</p>
+<p>Kliknij <span class="helpButton">Zapisz</span> aby zachować dane o nowym kliencie; kliknij <span class="helpButton">Anuluj</span> aby oupścić formularz, bez zapisywania danych.</p>
 
 
