zamiana dziwnego  "Skasuj" na popularne "Anuluj"

--- a/langpack/modules/Connectors/language/pl.help.ModifySearch.html
+++ b/langpack/modules/Connectors/language/pl.help.ModifySearch.html
@@ -48,4 +48,4 @@
 <br>
 <p>Użyj tej strony, aby wybrać pola, za pomocą których użytkownicy będą mogli wyszukać dane źródłowe. To, ile pól wybierzesz jest limitowane parametrami Wyszukiwania, jakie są wspierane przez dane źródło.<br>
 <p>Jigsaw wspiera tylko Nazwę firmy. Hoovers wspiera Nazwę firmy, Miasto, Województwo, Kraj i Kod pocztowy.<br>
-<p>Kliknij <span class="helpButton">Zachowaj</span> by zapisać mapowania; kliknij <span class="helpButton">Skasuj</span>, aby opuścić formularz bez zapisywania mapowań.
+<p>Kliknij <span class="helpButton">Zachowaj</span> by zapisać mapowania; kliknij <span class="helpButton">Anuluj</span>, aby opuścić formularz bez zapisywania mapowań.
