--- a/langpack/modules/Connectors/language/pl_pl.help.ModifyDisplay.html
+++ b/langpack/modules/Connectors/language/pl_pl.help.ModifyDisplay.html
@@ -42,4 +42,4 @@
 Użyj tej strony do włączenia łączników źródeł zewnętrznych dla modułów Sugar.<br>
 <p>Możesz włączyć łączniki dla dowolnego modułu standardowego, pojawiającego się w Studio, lub własnego, są one zaprojektowane dla modułów typu firma, lub osoba, takich jak Klienci, Wizytówki i Kontakty. Moduł musi również mieć standardowy widok szczegółowy.<br>
 <p>Aby włączyć łącznik dla modułu, we właściwej zakładce łącznika przeciągnij moduł z listy Wyłączonych do listy Włączonych.<br>
-<p>Kliknij <span class="helpButton">Zachowaj</span>, aby zapisać zmiany ustawień. Kliknij <span class="helpButton">Skasuj</span> aby opuścić formularz bez zapisywania ustawień.
+<p>Kliknij <span class="helpButton">Zachowaj</span>, aby zapisać zmiany ustawień. Kliknij <span class="helpButton">Anuluj</span> aby opuścić formularz bez zapisywania ustawień.
