--- a/langpack/modules/Connectors/language/pl_pl.help.ModifyMapping.html
+++ b/langpack/modules/Connectors/language/pl_pl.help.ModifyMapping.html
@@ -44,4 +44,4 @@
 <br>
 <p>Użycie tej opcji mapuje dane z pól w źródłach danych do pól w łącznikach, włączonych w modułach Sugar. Dla łączników, które są instalowane wraz z aplikacją, odpowiednie pola są mapowane domyślnie. Możesz zmienić te mapowania, lub dodać nowe pola.<br>
 <p>Aby zmienić domyślne mapowania, lub dodać nowe pola, wybierz pola aplikacji z listy rozwijalnej, odpowiedniej dla pola w łączniku we właściwej belce łącznika.<br>
-<p>Kliknij <span class="helpButton">Zachowaj</span>, aby zapisać zmiany mapowań. Kliknij <span class="helpButton">Skasuj</span> aby opuścić formularz bez zapisywania mapowań.
+<p>Kliknij <span class="helpButton">Zachowaj</span>, aby zapisać zmiany mapowań. Kliknij <span class="helpButton">Anuluj</span> aby opuścić formularz bez zapisywania mapowań.
