--- a/langpack/modules/Connectors/language/pl_pl.help.ModifyProperties.html
+++ b/langpack/modules/Connectors/language/pl_pl.help.ModifyProperties.html
@@ -59,4 +59,4 @@ Użyj tej strony, aby skonfigurować adresy URL i klucze API dla łączników.
 <li><span class="helpButton">Maksymalna liczba na liście wyników</span>. Aby zmienić liczbę wyników wyświetlanych na stronie, wprowadź pożądaną liczbę. Wartość domyślna to 20 rekordów na stronę.
 
 </ul>
-<p>Kliknij <span class="helpButton">Zachowaj</span>, aby zapisać zmiany ustawień. Kliknij <span class="helpButton">Skasuj</span> aby opuścić formularz bez zapisywania ustawien.
+<p>Kliknij <span class="helpButton">Zachowaj</span>, aby zapisać zmiany ustawień. Kliknij <span class="helpButton">Anuluj</span> aby opuścić formularz bez zapisywania ustawien.
